fix button positioning on mobile and button drop shadow

--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -464,12 +464,13 @@ body {
   justify-content: space-between;
   list-style-type: none;
   margin: 0;
+  padding: 0;
 }
 .rocket-buttons li a {
   background: #c4122f;
   border: 2px solid #ffffff;
   border-radius: 50%;
-  box-shadow: inset 0 10px 10px rgba(255, 255, 255, 0.5), inset 0 -8px 13px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 10px 10px rgba(255, 255, 255, 0.5), inset 0 -8px 13px rgba(0, 0, 0, 0.5), 0 3px 8px #4b484b;
   color: #ffffff;
   display: block;
   height: 3.125rem;
@@ -523,21 +524,11 @@ body {
 }
 .rocket-buttons li a:hover, .rocket-buttons li a.visited, .rocket-buttons li a.active {
   background: #ffffff;
-  box-shadow: none;
+  box-shadow: 0 3px 8px #4b484b;
   color: #c4122f;
 }
 .rocket-buttons li a:hover:after, .rocket-buttons li a.active:after {
   border: 2px solid #c4122f;
-}
-.rocket-buttons li a:after {
-  border: 2px solid #ffffff;
-  box-shadow: 0 3px 8px #4b484b;
-  content: "";
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
 }
 @media (min-width: 30rem) {
   .rocket-buttons li a {
