--- a/scss/partials/_rocket-buttons.scss
+++ b/scss/partials/_rocket-buttons.scss
@@ -26,6 +26,7 @@
     justify-content: space-between;
     list-style-type: none;
     margin: 0;
+    padding: 0;
   }
 
   li {
@@ -33,8 +34,9 @@
       background: $red;
       border: 2px solid $white;
       border-radius: 50%;
-      box-shadow: inset 0 10px 10px rgba(255, 255, 255, 0.5),
-        inset 0 -8px 13px rgba(0, 0, 0, 0.5);
+      box-shadow: inset 0 10px 10px rgba($white, 0.5),
+        inset 0 -8px 13px rgba(0, 0, 0, 0.5),
+        0 3px 8px $gray;
       color: $white;
       display: block;
       height: 3.125rem;
@@ -90,24 +92,13 @@
       &.visited,
       &.active {
         background: $white;
-        box-shadow: none;
+        box-shadow: 0 3px 8px $gray;
         color: $red;
       }
 
       &:hover:after,
       &.active:after {
         border: 2px solid $red;
-      }
-
-      &:after {
-        border: 2px solid $white;
-        box-shadow: 0 3px 8px $gray;
-        content: '';
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
       }
 
       @media (min-width: $bp-mobile) {
